Fix alignment on rule dialog

--- a/src/components/flow/routers/case/CaseElement.module.scss
+++ b/src/components/flow/routers/case/CaseElement.module.scss
@@ -18,7 +18,6 @@ input:focus {
   vertical-align: sub;
   font-size: 13px;
   line-height: 13px;
-  padding-top: 7px;
 }
 
 .kase.has_intent,
@@ -34,6 +33,7 @@ input:focus {
 
 .kase {
   display: inline-flex;
+  align-items: center;
   user-select: none;
   margin-bottom: 5px;
   .form_group {
@@ -44,8 +44,10 @@ input:focus {
   }
   .single_operand {
     display: inline-flex;
+    align-items: center;
     position: relative;
     margin-left: $spacing;
+    margin-top: 4px;
 
     width: 170px;
     input {
@@ -55,8 +57,10 @@ input:focus {
 
   .multi_operand {
     display: inline-flex;
+    align-items: center;
     margin-left: $spacing;
     width: 170px;
+    margin-top: 4px;
 
     input[name='intent'] {
       width: 105px;
@@ -71,12 +75,12 @@ input:focus {
     font-size: 13px;
     line-height: 13px;
     position: relative;
-    top: 7px;
     width: 95px;
     text-align: center;
     margin: 0px $spacing - 2;
   }
   .category {
+    margin-top: 4px;
     position: relative;
   }
   &:hover {
